[package]
name = "gtc"
version = "0.2.1"
authors = ["danczw <>"]
license = "Apache-2.0"
description = "A cli written in rust designed to facilitate seamless text-based conversations with ChatGPT."
readme = "README.md"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "4.3.19"
colored = "2.0.0"
dirs = "5.0.1"
mockito = "1.1.0"
reqwest = { version = "0.11", features = ["json"] }
serde_json = "1.0"
tokio = { version = "1", features = ["full"] }
